@@ -2,6 +2,8 @@
  - (djm) Reorder tests and library inclusion for Krb4/AFS to try to 
    resolve linking conflicts with libcrypto. Report and suggested fix 
    from Holger Trapp <Holger.Trapp@Informatik.TU-Chemnitz.DE>
+ - (djm) Work around Solaris' broken struct dirent. Diagnosis and suggested
+   fix from Philippe Levan <levan@epix.net>
 
 20010327
  - (djm) Reestablish PAM credentials (which can be supplemental group 
@@ -4683,4 +4685,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.991.2.12 2001/03/28 03:04:13 djm Exp $
+$Id: ChangeLog,v 1.991.2.13 2001/03/28 04:37:37 djm Exp $
